-
Bug
-
Resolution: Done
-
P2: Important
-
5.9.0
-
MacOS Sierra 10.12, MacOS El Capitan 10.11.5
-
c12072c685f7e93d5b84e289ca23106482379eff, b5d762ae87e8f3a35a84a6c7d6d324c27d487a8c
The title text moves on top of the icon when tabs are squeezed (made horizontally smaller). The elide text mode needs to be set on.
Steps to reproduce:
- Run the sample application attached.
- Make the application window horizontally smaller so that the tabs get squeezed
- Result: The incorrect behavior described above.
- relates to
-
QTBUG-64630 [macOS] QTabWidget uses tab's title space badly when a tab is closable and has an icon
-
- Closed
-
| For Gerrit Dashboard: QTBUG-61235 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 202790,3 | macOS: Fix padding around tab label with icon | 5.9 | qt/qtbase | Status: MERGED | +2 | 0 |